# CompletionsToMessages

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  perplexity.Dockerfile
perplexity-data/: token_pool_config.json.example
src/: auth.rs  circuit_breaker.rs  config.rs  database.rs  error.rs  handler.rs  key_pool.rs  main.rs  perplexity_proxy.rs  prompt_cache.rs  server.rs  stats_api.rs  streaming.rs  thinking.rs  transform.rs  usage.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  globals.css  vite-env.d.ts
web/src/components/: AdminLogin.tsx  Toast.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  table.tsx  tabs.tsx
web/src/components/usage/: AccessTokenManager.tsx  ApiKeyManager.tsx  ChannelManager.tsx  ModelStatsPage.tsx  ModelStatsTable.tsx  PerplexityManager.tsx  RequestLogPage.tsx  RequestLogTable.tsx  UsageDashboard.tsx  UsageSummaryCards.tsx  UsageTrendChart.tsx  format.ts
web/src/hooks/: use-usage.ts
web/src/lib/: api.ts  utils.ts
web/src/types/: usage.ts
